[관리자페이지] 관리자계정 로그인 실패시 처리 버그 수정완료

--- a/src/main/resources/templates/admin/fragments/html-header.html
+++ b/src/main/resources/templates/admin/fragments/html-header.html
@@ -9,6 +9,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/admin/">마이페이지</a></li>
               <li><a class="dropdown-item" href="/admin/adminList">관리자 관리</a></li>
+              <li><a class="dropdown-item" href="/admin/sign/signOut">로그아웃</a></li>
             </ul>
           </div>
         </div>
