--- a/src/main/resources/static/assets/css/index.css
+++ b/src/main/resources/static/assets/css/index.css
@@ -21,8 +21,21 @@ body {
     /* rtl:remove */
     left: 0;
     z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+.admin-h3-title {
+    margin-bottom: 100px !important; 
+}
+
+.row {
+    margin: 10px;
+}
+.row .label {
+    align-self: center;
+}
+.row input[type=text], input[type=password] {
+    width: 80%;
+    height: 45px;
 }
 
 @media (max-width: 767.98px) {
