--- a/src/main/resources/templates/admin/companysmanage/CompanysList.html
+++ b/src/main/resources/templates/admin/companysmanage/CompanysList.html
@@ -7,110 +7,111 @@
 </head>
 <head th:replace="admin/fragments/html-head.html :: html-head" />
 <body>
-<header th:replace="admin/fragments/html-header.html :: html-header" />
 <div class="container-fluid">	
     <div class="row">
         <div class="col-2">
             <nav th:replace="admin/fragments/html-sidebar.html :: html-sidebar" />
         </div>
         <div class="col-10">
-            <h3>탐정 관리</h3>
-            <div class="row">
-                <div class="col-5">&nbsp;</div>            
-                <div class="col">
-                    <select class="form-select">                       
-                        <option value="미승인">미승인</option>
-                        <option value="승인" selected>승인</option>
-                    </select>
+        <header th:replace="admin/fragments/html-header.html :: html-header" />
+            <div class="container-fluid">
+                <h3>탐정 관리</h3>
+                <div class="row">
+                    <div class="col-3">&nbsp;</div>            
+                    <div class="col">
+                        <select class="form-select">                       
+                            <option value="미승인">미승인</option>
+                            <option value="승인" selected>승인</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <select class="form-select">
+                            <option value="" selected disabled>선택</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="검색어" aria-label="검색어" aria-describedby="searchBtn">
+                            <button class="btn btn-outline-secondary" type="button" id="searchBtn">검색</button>
+                        </div>
+                    </div>
+                </div>            
+                <br/>            
+                <div class="tableDiv">
+                    <table class="table">
+                        <thead>
+                            <tr class="table-success">
+                                <th>번호</th>
+                                <th>업체명</th>
+                                <th>대표자</th>
+                                <th>연락처</th>
+                                <th>분야</th>
+                                <th>지역</th>
+                                <th>승인상태</th>
+                                <th>프리미엄</th>
+                                <th>마패</th>
+                                <th>등록일시</th>
+                            </tr>
+                        </thead>
+                        <tbody th:if="companysList != null">
+                            <tr th:if="${companysList} != null" th:each="companysList : ${companysList}">
+                                <td>[[${companysList.companysIdx}]]</td>
+                                <td>
+                                    <a th:href="@{/admin/companysManager/companysInfo(companysIdx=${companysList.companysIdx})}">[[${companysList.companysName}]]</a>
+                                </td>
+                                <td>[[${companysList.companysCeoName}]]</td>
+                                <td>[[${companysList.companysPhone}]]</td>
+                                <td th:if="${companysList.companysCategory[0].length} < 5">[[${companysList.companysCategory[0]}]]</td>
+                                <td th:unless="${companysList.companysCategory[0].length} < 5">[[${#strings.substring(companysList.companysCategory[0], 0, 5)}]]...</td>
+                                <td>[[${companysList.companysRegion1}]]</td>
+                                <td th:if="${companysList.companysEnabled} == 1">승인</td>
+                                <td th:unless="${companysList.companysEnabled} == 1">미승인</td>
+                                <td th:if="${companysList.companysPremium} == true">적용</td>
+                                <td th:unless="${companysList.companysPremium} == true">미적용</td>
+                                <td th:if="${companysList.companysLocalPremium} == true">적용</td>
+                                <td th:unless="${companysList.companysLocalPremium} == true">미적용</td>
+                                <td>[[${companysList.companysRegistDate}]]</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div class="col">
-                    <select class="form-select">
-                        <option value="" selected disabled>선택</option>
-                    </select>
-                </div>
-                <div class="col">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="검색어" aria-label="검색어" aria-describedby="searchBtn">
-                        <button class="btn btn-outline-secondary" type="button" id="searchBtn">검색</button>
+                <div class="row">
+                    <div class="col text-end">
+                        <button class="btn btn-outline-secondary" id="csvBtn">CSV 다운</button>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-outline-secondary" id="selectedDelete">삭제</button>
+                    </div>
+                    <div class="col-6">&nbsp;</div>
+                    <div class="col text-end">
+                        <button class="btn btn-outline-secondary" id="addCompany">등록</button>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-outline-secondary" id="updateCategory">분야수정</button>
                     </div>
                 </div>
+                <!-- <div class="">
+                    <nav>
+                        <ul class="pagination">
+                            <li th:if="${currentPage > pagination.blockCount}">
+                                <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
+                                    PREV
+                                </a>
+                            </li>
+                            <li class="page-item" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">
+                                <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                                    [[${page}]]
+                                </a>
+                            </li>
+                            <li th:if="${pagination.blockCount > 10}">
+                                <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
+                                    NEXT
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div> -->
             </div>
-            
-            <br/>            
-            <div class="tableDiv">
-                <table class="table">
-                    <thead>
-                        <tr class="table-success">
-                            <th>번호</th>
-                            <th>업체명</th>
-                            <th>대표자</th>
-                            <th>연락처</th>
-                            <th>분야</th>
-                            <th>지역</th>
-                            <th>승인상태</th>
-                            <th>프리미엄</th>
-                            <th>마패</th>
-                            <th>등록일시</th>
-                        </tr>
-                    </thead>
-                    <tbody th:if="companysList != null">
-                        <tr th:if="${companysList} != null" th:each="companysList : ${companysList}">
-                            <td>[[${companysList.companysIdx}]]</td>
-                            <td>
-                                <a th:href="@{/admin/companysManager/companysInfo(companysIdx=${companysList.companysIdx})}">[[${companysList.companysName}]]</a>
-                            </td>
-                            <td>[[${companysList.companysCeoName}]]</td>
-                            <td>[[${companysList.companysPhone}]]</td>
-                            <td th:if="${companysList.companysCategory[0].length} < 5">[[${companysList.companysCategory[0]}]]</td>
-                            <td th:unless="${companysList.companysCategory[0].length} < 5">[[${#strings.substring(companysList.companysCategory[0], 0, 5)}]]...</td>
-                            <td>[[${companysList.companysRegion1}]]</td>
-                            <td th:if="${companysList.companysEnabled} == 1">승인</td>
-                            <td th:unless="${companysList.companysEnabled} == 1">미승인</td>
-                            <td th:if="${companysList.companysPremium} == true">적용</td>
-                            <td th:unless="${companysList.companysPremium} == true">미적용</td>
-                            <td th:if="${companysList.companysLocalPremium} == true">적용</td>
-                            <td th:unless="${companysList.companysLocalPremium} == true">미적용</td>
-                            <td>[[${companysList.companysRegistDate}]]</td>
-                          </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="row">
-                <div class="col text-end">
-                    <button class="btn btn-outline-secondary" id="csvBtn">CSV 다운</button>
-                </div>
-                <div class="col">
-                    <button class="btn btn-outline-secondary" id="selectedDelete">삭제</button>
-                </div>
-                <div class="col-6">&nbsp;</div>
-                <div class="col text-end">
-                    <button class="btn btn-outline-secondary" id="addCompany">등록</button>
-                </div>
-                <div class="col">
-                    <button class="btn btn-outline-secondary" id="updateCategory">분야수정</button>
-                </div>
-            </div>
-            <!-- <div class="">
-                <nav>
-                    <ul class="pagination">
-                        <li th:if="${currentPage > pagination.blockCount}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
-                                PREV
-                            </a>
-                        </li>
-                        <li class="page-item" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
-                                [[${page}]]
-                            </a>
-                        </li>
-                        <li th:if="${pagination.blockCount > 10}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
-                                NEXT
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div> -->
         </div>
     </div>
 </div>
