--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,19 +5,19 @@
 </head>
 <head th:replace="admin/fragments/html-head.html :: html-head"/>
 <body>
-<header th:replace="admin/fragments/html-header.html :: html-header" />
 <div class="container-fluid">	
 	<div class="row">
 		<div class="col-2">
 			<nav th:replace="admin/fragments/html-sidebar.html :: html-sidebar" />
 		</div>
 		<div class="col-10">
+			<header th:replace="admin/fragments/html-header.html :: html-header" />
 			<div class="index-main container text-center">
-				<h3 class="h3">관리자 페이지</h3>
+				<h3 class="h3 admin-h3-title">관리자 페이지</h3>
 				<div th:if="${user} != null">				
 				<form class="form" method="POST" th:action="@{/admin/adminUpdate}">
 				<div class="row invisible-row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersIdx">회원번호</label>						
 					</div>
 					<div class="col-9 text-start">
@@ -25,7 +25,7 @@
 					</div>				
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersAccount">아이디</label>						
 					</div>
 					<div class="col-9 text-start">
@@ -33,7 +33,7 @@
 					</div>				
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersPass">새 비밀번호</label>
 					</div>
 					<div class="col-9 text-start">
@@ -41,15 +41,15 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
-						<label for="usersPassCheck">비밀번호 확인</label>
+					<div class="col-3 text-start label">
+						<label for="usersPassCheck ">비밀번호 확인</label>
 					</div>
 					<div class="col-9 text-start">
 						<input type="password" size="30" id="usersPassCheck" name="usersPassCheck" value="" />
 					</div>					
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersName">이름</label>
 					</div>
 					<div class="col-9 text-start">
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersPhone">연락처</label>
 					</div>
 					<div class="col-9 text-start">
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-3 text-start">
+					<div class="col-3 text-start label">
 						<label for="usersEmail">이메일</label>
 					</div>
 					<div class="col-9 text-start">
@@ -83,6 +83,76 @@
 					</div>
 				</div>
 				</form>
+				</div>
+				<div th:unless="${user} != null">
+					<form class="form" method="POST" th:action="@{/admin/adminUpdate}">
+						<div class="row invisible-row">
+							<!-- <div class="col-3 text-start">
+								<label for="usersIdx">회원번호</label>						
+							</div>
+							<div class="col-9 text-start">
+								<input type="text" size="30" id="usersIdx" name="usersIdx" readonly/>
+							</div>				 -->
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersAccount">아이디</label>						
+							</div>
+							<div class="col-9 text-start">
+								<input type="text" size="30" id="usersAccount" name="usersAccount" readonly/>
+							</div>				
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersPass">새 비밀번호</label>
+							</div>
+							<div class="col-9 text-start">
+								<input type="password" size="30" id="usersPass" name="usersPass" value="" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersPassCheck">비밀번호 확인</label>
+							</div>
+							<div class="col-9 text-start">
+								<input type="password" size="30" id="usersPassCheck" name="usersPassCheck" value="" />
+							</div>					
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersName">이름</label>
+							</div>
+							<div class="col-9 text-start">
+								<input type="text" size="30" id="usersName" name="usersName" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersPhone">연락처</label>
+							</div>
+							<div class="col-9 text-start">
+								<input type="text" size="30" id="usersPhone" name="usersPhone"  />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-3 text-start label">
+								<label for="usersEmail">이메일</label>
+							</div>
+							<div class="col-9 text-start">
+								<input type="text" size="30" id="usersEmail" name="usersEmail"  />
+							</div>
+						</div>
+						<br/>
+						<br/>
+						<div class="row">
+							<div class="col text-end">
+								<input type="submit" class="btn btn-primary" value="수정" />
+							</div>
+							<div class="col text-start">
+								<input type="reset" id="cancleBtn" class="btn" value="취소" />
+							</div>
+						</div>
+						</form>
 				</div>
 			</div>
 		</div>
