--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -47,7 +47,7 @@
                     </tbody>
 
                     <tbody th:if="${count} ne 0">
-                    <tr th:each="list : ${noticeList}" class="js-modalShow review-btn" data-modal="review">
+                    <tr th:each="list : ${noticeList}" class="js-modalShow notice-btn" data-modal="review">
                         <td class="check"><input type="checkbox" name="listCheck"></td>
                         <td>
                             <span th:text="${list.idx}"></span>
@@ -56,7 +56,10 @@
                             <span th:text="${list.title}"></span>
                         </td>
                         <td>
-                            <div class="review-wrap">
+                            <div class="review-wrap" th:if="${list.content.length > 15}">
+                                <span th:text="${list.content.substring(0, 15)}"></span>
+                            </div>
+                            <div class="review-wrap" th:unless="${list.content.length > 15}">
                                 <span th:text="${list.content}"></span>
                             </div>
                         </td>
@@ -97,7 +100,7 @@
         </section>
     </main>
 
-    <div class="modal modal-review w-760" data-modal="review">
+    <div class="modal modal-notice w-760" data-modal="notice">
         <div class="modal__inner">
             <div class="modal-head">
                 <span class="modal__title">공지사항 상세</span>
@@ -106,35 +109,51 @@
             <div class="write">
                 <input type="hidden" class="modal-id">
                 <div class="write-body">
-                    <div class="review-body">
-                        <div class="score-wrap">
-                            <div class="average-wrap">
-                                <span class="average-label">리뷰 평균 점수</span>
-                                <span class="average-score">4.75</span>
-                            </div>
-                            <div class="s-wrap">
-                                <div class="star-wrap">
-                                    <span class="star-label">성과 만족도</span>
-                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star1.svg}">
-                                </div>
-                                <div class="star-wrap">
-                                    <span class="star-label">소통능력</span>
-                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star3.svg}">
-                                </div>
-                                <div class="star-wrap">
-                                    <span class="star-label">일정준수</span>
-                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star5.svg}">
-                                </div>
-                                <div class="star-wrap">
-                                    <span class="star-label">전문성 </span>
-                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star4.svg}">
-                                </div>
-                            </div>
+                    <div class="modal-notice">
+                    <fieldset class="fieldset">
+                        <div class="input-wrap">
+                            <label class="label">제목<i class="required">*</i></label>
+                            <input type="text" id="title" class="input" spellcheck="false" placeholder="제목 입력">
                         </div>
-                        <div class="details-wrap">
-
+                        <div class="input-wrap">
+                            <label class="label">작성자<i class="required">*</i></label>
+                            <input type="text" id="author" class="input" spellcheck="false" th:value="${usersName}" readonly>
                         </div>
+                        <div class="input-wrap">
+                            <label class="label">내용</label>
+                            <textarea id="content" class="textarea">[[${content}]]</textarea>
+                        </div>
+                    </fieldset>
                     </div>
+<!--                    <div class="review-body">-->
+<!--                        <div class="score-wrap">-->
+<!--                            <div class="average-wrap">-->
+<!--                                <span class="average-label">리뷰 평균 점수</span>-->
+<!--                                <span class="average-score">4.75</span>-->
+<!--                            </div>-->
+<!--                            <div class="s-wrap">-->
+<!--                                <div class="star-wrap">-->
+<!--                                    <span class="star-label">성과 만족도</span>-->
+<!--                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star1.svg}">-->
+<!--                                </div>-->
+<!--                                <div class="star-wrap">-->
+<!--                                    <span class="star-label">소통능력</span>-->
+<!--                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star3.svg}">-->
+<!--                                </div>-->
+<!--                                <div class="star-wrap">-->
+<!--                                    <span class="star-label">일정준수</span>-->
+<!--                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star5.svg}">-->
+<!--                                </div>-->
+<!--                                <div class="star-wrap">-->
+<!--                                    <span class="star-label">전문성 </span>-->
+<!--                                    <img class="star-img" th:src="@{/assets/images/ico/ico-star4.svg}">-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="details-wrap">-->
+
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="form__action bottom">
                         <button class="btn-del hospital-delete">삭제하기</button>
                         <button class="btn-prime hospital-modify">수정하기</button>
