--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -171,7 +171,7 @@
             highlightMenu();
             pageOn();
             listCheck();
-            reviewDetailsModal();
+            noticeDetailsModal();
             new Table(document.querySelector('#main table'));
         });
     </script>
