--- a/src/main/resources/templates/admin/fragments/config.html
+++ b/src/main/resources/templates/admin/fragments/config.html
@@ -21,6 +21,7 @@
         <script defer th:src="@{/assets/js/admin/layout.js}"></script>
         <script defer th:src="@{/assets/js/admin/event.js}"></script>
         <script defer th:src="@{/assets/js/admin/modal.js}"></script>
+        <script defer th:src="@{/assets/js/admin/noticemodal.js}"></script>
     </head>
 </th:block>
 </html>
