[관리자페이지] 공지사항 상세보기에서 수정, 삭제 완료

--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -150,6 +150,7 @@
             pageOn();
             listCheck();
             noticeDetailsModal();
+            updateNoticeByNoticeIdx();
             new Table(document.querySelector('#main table'));
         });
     </script>
