좋아요 목록 공지사항 상세조회 추가

--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -31,13 +31,15 @@
 
             <li><a th:href="@{/admin/manage/hospital/list}" data-category="report">신고 관리</a></li>
 
-            <li class="js-dropdown">
-                <a href="#none" class="js-dropdown__btn" role="button" data-category="banner">배너 관리</a>
-                <ul class="nav-sub js-dropdown__cont">
-                    <li class=""><a th:href="@{/admin/manage/member/list}" data-category="main">메인</a></li>
-                    <li class=""><a th:href="@{/admin/manage/member/register}" data-category="detective">탐정찾기</a></li>
-                </ul>
-            </li>
+            <li><a th:href="@{/admin/manage/banner/list}" data-category="banner">배너 관리</a></li>
+
+<!--            <li class="js-dropdown">-->
+<!--                <a href="#none" class="js-dropdown__btn" role="button" data-category="banner">배너 관리</a>-->
+<!--                <ul class="nav-sub js-dropdown__cont">-->
+<!--                    <li class=""><a th:href="@{/admin/manage/member/list}" data-category="main">메인</a></li>-->
+<!--                    <li class=""><a th:href="@{/admin/manage/member/register}" data-category="detective">탐정찾기</a></li>-->
+<!--                </ul>-->
+<!--            </li>-->
 
             <li class="js-dropdown">
                 <a href="#none" class="js-dropdown__btn" role="button" data-category="board">게시판 관리</a>
