--- a/src/main/resources/templates/admin/fragments/config.html
+++ b/src/main/resources/templates/admin/fragments/config.html
@@ -17,11 +17,13 @@
         <meta property="og:description" content="어사">
         <meta property="og:locale" content="ko_KR">
         <link rel="stylesheet" th:href="@{/assets/css/admin/main.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/admin/banner.css}">
         <script defer th:src="@{/assets/js/admin/common.js}"></script>
         <script defer th:src="@{/assets/js/admin/layout.js}"></script>
         <script defer th:src="@{/assets/js/admin/event.js}"></script>
         <script defer th:src="@{/assets/js/admin/modal.js}"></script>
         <script defer th:src="@{/assets/js/admin/noticemodal.js}"></script>
+        <script defer th:src="@{/assets/js/admin/banner.js}"></script>
     </head>
 </th:block>
 </html>
