--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -46,7 +46,7 @@
                 <ul class="nav-sub js-dropdown__cont">
                     <li class=""><a th:href="@{/admin/manage/notice/list}" data-category="notice">공지사항</a></li>
                     <li class=""><a th:href="@{/admin/manage/event/list}" data-category="event">이벤트</a></li>
-                    <li class=""><a th:href="@{/admin/manage/tip/register}" data-category="tip">어사 Tip</a></li>
+<!--                    <li class=""><a th:href="@{/admin/manage/tip/register}" data-category="tip">어사 Tip</a></li>-->
                 </ul>
             </li>
 
